--- a/src/components/Portfolio/portfolio.css
+++ b/src/components/Portfolio/portfolio.css
@@ -95,9 +95,9 @@
         background-image: url('../../assets/images/medium/day-planner.jpg');
     } */
 
-    /* #escowinart {
+    #escowinart {
         background-image: url('../../assets/images/medium/escowinart.jpg');
-    } */
+    }
 
     #note-taker {
         background-image: url('../../assets/images/medium/note-taker.jpg');
