--- a/src/components/Portfolio/portfolio.css
+++ b/src/components/Portfolio/portfolio.css
@@ -7,6 +7,10 @@
     background-image: url('../../assets/images/small/bluestrawberry.jpg');
 }
 
+#cms-blog {
+    background-image: url('../../assets/images/small/cms-blog.jpg');
+}
+
 #coding-quiz {
     background-image: url('../../assets/images/small/coding-quiz.jpg');
 }
@@ -82,6 +86,10 @@
     /* #bluestrawberry {
         background-image: url('../../assets/images/medium/bluestrawberry.jpg');
     } */
+
+    #cms-blog {
+        background-image: url('../../assets/images/medium/cms-blog.jpg');
+    }
 
     #coding-quiz {
         background-image: url('../../assets/images/medium/coding-quiz.jpg');
@@ -159,6 +167,10 @@
 
     #bluestrawberry {
         background-image: url('../../assets/images/large/bluestrawberry.jpg');
+    }
+
+    #cms-blog {
+        background-image: url('../../assets/images/large/cms-blog.jpg');
     }
 
     #coding-quiz {
