--- a/src/components/ResumeFooter/index.css
+++ b/src/components/ResumeFooter/index.css
@@ -1,5 +1,5 @@
 #resume-footer {
     text-align: center;
     padding: 0;
-    border-top: 2px solid var(--offblack);
+    border-top: var(--border);
 }
