restyled resume for media print

--- a/src/components/Resume/index.css
+++ b/src/components/Resume/index.css
@@ -2,6 +2,10 @@
     --border: 1px solid var(--offblack)
 }
 
+* {
+    /* outline: 1px dotted blue; */
+}
+
 /* display toggles */
 .display-print {
     display: none;
