--- a/src/components/Skillset/index.css
+++ b/src/components/Skillset/index.css
@@ -1,6 +1,6 @@
 #skills {
     display: grid;
-    grid-template-columns: repeat(1, auto 1fr);
+    grid-template-columns: 4.125rem 1fr;
     gap: .5rem 1rem;
     word-spacing: .5rem;
     align-items: baseline;
