--- a/src/assets/css/applications.css
+++ b/src/assets/css/applications.css
@@ -57,7 +57,7 @@
 }
 
 #ratio-calculator {
-    background-image: url('../../assets/images/large/ratio-calculator.jpg');
+    background-image: url('../../assets/images/small/ratio-calculator.jpg');
 }
 
 #readme-generator {
@@ -147,6 +147,10 @@
 
     #portfolio-generator {
         background-image: url('../../assets/images/medium/portfolio-generator.jpg');
+    }
+
+    #ratio-calculator {
+        background-image: url('../../assets/images/large/ratio-calculator.jpg');
     }
 
     /* #readme-generator {
